--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>expense manager</title>
-    <link rel="stylesheet" type="text/css" href="/main.css" />
+    <link rel="stylesheet" type="text/css" href="/dist/styles.css" />
 </head>
 <body>
 
     <div id="app"></div>
-    <script src="/bundle.js"></script>
+    <script src="/dist/bundle.js"></script>
 </body>
 </html>
